<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a47276138y.juegomagic.Main_ActivityFragment"
    tools:showIn="@layout/activity_main_">

    <Button
        android:text="@string/lifedown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btCentralD"
        app:layout_constraintRight_toRightOf="@+id/btCentralU"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btCentralU"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="@+id/btCentralU" />

    <Button
        android:text="@string/lifeup"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:id="@+id/btCentralU"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/horizLine"
        android:layout_marginBottom="8dp"
        android:textAllCaps="false" />

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/horizLine"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="227dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.4989011" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btAddP"
        android:textSize="14sp"
        android:textColor="@android:color/holo_green_light"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/point" />

    <Button
        android:text="@string/life"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btAddL"
        app:layout_constraintLeft_toLeftOf="@+id/btAddP"
        app:layout_constraintRight_toRightOf="@+id/btAddP"
        app:layout_constraintBottom_toTopOf="@+id/btCentralU"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btAddP"
        android:textColor="@android:color/holo_red_dark"
        android:textAllCaps="false"
        tools:typeface="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btSubP"
        app:layout_constraintTop_toTopOf="@+id/btAddP"
        app:layout_constraintBottom_toBottomOf="@+id/btAddP"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/point2"
        android:textAllCaps="false"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btSubL"
        app:layout_constraintRight_toRightOf="@+id/btSubP"
        app:layout_constraintLeft_toLeftOf="@+id/btSubP"
        app:layout_constraintBottom_toTopOf="@+id/btCentralU"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btSubP"
        android:textColor="@android:color/holo_red_dark"
        android:textAllCaps="false"
        android:text="@string/life2" />

    <Button
        android:text="@string/life"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btAddLD"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btCentralD"
        app:layout_constraintBottom_toTopOf="@+id/btAddPD"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="@+id/btAddL"
        app:layout_constraintLeft_toLeftOf="@+id/btAddL"
        app:layout_constraintHorizontal_bias="0.52"
        android:textColor="@android:color/holo_red_dark"
        android:textAllCaps="false" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btAddPD"
        app:layout_constraintLeft_toLeftOf="@+id/btAddLD"
        app:layout_constraintRight_toRightOf="@+id/btAddLD"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/point"
        android:textColor="@android:color/holo_green_light"
        android:textAllCaps="false" />

    <Button
        android:text="@string/life2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btSubLD"
        app:layout_constraintLeft_toLeftOf="@+id/btSubL"
        app:layout_constraintRight_toRightOf="@+id/btSubL"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btCentralD"
        app:layout_constraintBottom_toTopOf="@+id/btSubPD"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:textAllCaps="false" />

    <Button
        android:text="@string/point2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btSubPD"
        app:layout_constraintLeft_toLeftOf="@+id/btSubLD"
        app:layout_constraintRight_toRightOf="@+id/btSubLD"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_green_light"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/_20_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvD"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btCentralD"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toLeftOf="@+id/btSubLD"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btAddLD"
        android:layout_marginLeft="8dp"
        tools:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="30sp" />

    <TextView
        android:text="@string/_20_0_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvU"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btCentralU"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btAddL"
        app:layout_constraintRight_toLeftOf="@+id/btSubL"
        tools:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="30sp" />

</android.support.constraint.ConstraintLayout>
